...
"custom_region_builder_controller.sidecar_section.explanation" = "Optional. The address of an Obaco (OneBusAway.co) sidecar server, which powers features like alarms and surveys. \"https://\" is assumed.";

/* Title of the Sidecar Server header. */
"custom_region_builder_controller.sidecar_section.header_title" = "Sidecar Server";

/* Action button title for the DataMigrationBulletinPage. */
"data_migration_bulletin.action_button" = "Continue";

/* Title for the DataMigrationBulletinPage. */
"data_migration_bulletin.data_upgrade_title" = "Data Upgrade";

/* Dismissal button title for the DataMigrationBulletinPage. */
"data_migration_bulletin.dismiss_button" = "Not Now";
...
"loading" = "Loading...";

/* Description of why we need location services */
"location_permission_bulletin.description_text" = "Please allow the app to access your location to make it easier to find your transit stops.";

/* Title of the alert that appears to request your location. */
"location_permission_bulletin.title" = "Welcome!";

/* Button that opens iOS Settings so the user can enable location services for the app. */
"locationservices_alert_gotosettings.button" = "Turn On in Settings";

/* Body of the alert prompting the user to grant precise location. */
"locationservices_alert_imprecise.message" = "You'll get to see where you are on the map and see nearby stops, making it easier to get where you need to go.";
...
"region_picker.show_experimental_regions_toggle" = "Show Experimental";

/* Title of a toggle that shows inactive regions. */
"region_picker.show_inactive_regions_toggle" = "Show Inactive";

/* Title of the Region Picker Item, which lets the user choose a new region from the map. */
"region_picker.title" = "Choose Region";

/* Error message of Custom Region URL if it's invalid or does not point to a functional OBA server */
"region_url.error_messsage" = "The provided region URL is invalid or does not point to a functional OBA server.";

/* Number of rental vehicles available at a station */
"rental_annotation.vehicles_available_fmt" = "%d available";
...
