...
    public static let refresh = NSLocalizedString("common.refresh", value: "Refresh", comment: "The verb 'refresh', as in 'reload'.")

    public static let save = NSLocalizedString("common.save", value: "Save", comment: "The verb 'save', as in 'save data'.")

    public static let scheduledNotRealTime = NSLocalizedString("common.scheduled_not_real_time", value: "Scheduled/not real-time", comment: "Explains that this is departure comes from schedule data, not from a real-time vehicle location.")

    public static let settings = NSLocalizedString("common.settings", value: "Settings", comment: "A noun referring to a collection of options for adjusting app behavior.")

    public static let updatedAtFormat = NSLocalizedString("common.updated_at_fmt", value: "Updated: %@", comment: "A format string used to tell the user when the UI they are looking at was last updated. e.g. Updated: 9:41 AM. The time is calculated at runtime.")

    public static let updating = NSLocalizedString("common.updating", value: "Updating…", comment: "Used to tell the user that the UI they are looking at is actively being updated with new data from the server.")
}

